chore: import bootstrap 5

--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,27 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <title>Pun Generator</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    
   </head>
   <body>
-    <div class="container mt-5">
-  
-  <div class="my-card clearfix">
-    <img src="https://via.placeholder.com/200" alt="Avatar" class="my-card__img" width="200">
-    <h3 class="my-name">My Name</h3>
-    <p class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium sunt hic vitae explicabo harum pariatur quas porro tenetur perferendis.</p>
-
-    <div class="experience">
-      <h6>Experience</h6>
-      <ul id="list" class="list-unstyled small">
-      </ul>
-    </div>
     
-  </div>
-</div>
+    <div class="container mt-5">
+      <div class="my-card clearfix">
+        <img src="https://via.placeholder.com/200" alt="Avatar" class="my-card__img" width="200">
+        <h3 class="my-name">My Name</h3>
+        <p class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium sunt hic vitae explicabo harum pariatur quas porro tenetur perferendis.</p>
+        <div class="experience">
+          <h6>Experience</h6>
+          <ul id="list" class="list-unstyled small">
+          </ul>
+        </div>
+      </div>
+    </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./main.js"></script>
   </body>
- <script type="text/javascript" src="./main.js"></script>
 </html>
