test: load main.js before testing

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <p class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium sunt hic vitae explicabo harum pariatur quas porro tenetur perferendis.</p>
         <div class="experience">
           <h6>Experience</h6>
-          <ul id="list" class="list-unstyled small">
+          <ul class="list-unstyled small">
           </ul>
         </div>
       </div>
